--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
 
 }
 
+h1{
+    text-align: center;
+}
+
 .message{
     width: 25%;
     background-color:grey;
@@ -40,7 +44,7 @@ clear: both;
 }
 
 #messageInp{
-    width: 94%;
+    width: 92%;
     border: 2px solid black;
     border-radius: 5px;
     height: 30px;
@@ -52,4 +56,11 @@ clear: both;
     border-radius: 5px;
     height: 30px;
 
+}
+
+.button{
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 9px;
+    background-color: green;
 }
